feat(cli): update template